# Shared-Memory-Godot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConstruct
doc_classes/: SharedMemory.html  SharedMemory.xml
include/: shared_memory.h  shared_memory.hpp
src/: process_handle_posix.cpp  process_handle_posix.h  register_types.cpp  shared_memory.cpp  shared_memory.h  shared_memory_posix.cpp  shared_memory_windows.cpp
test-shared-memory/: icon.svg.import  project.godot
test-shared-memory/addons/state_machine/: StateMachine.gd
test-shared-memory/addons/state_machine/state_base/: StateBase.gd
test-shared-memory/python/: requirements.txt
test-shared-memory/python/src/: main.py  read.py
test-shared-memory/python/src/lib/: example.py
test-shared-memory/python/src/test/: read.py  write.py
test-shared-memory/scenes/: main.tscn
test-shared-memory/scenes/main/: main.tscn
test-shared-memory/scenes/test/: read.tscn  write.tscn
test-shared-memory/scripts/: main.gd  read.gd
test-shared-memory/scripts/main/: main.gd
test-shared-memory/scripts/main/resources/: main_commands.gd  main_states.gd
test-shared-memory/scripts/main/states/: main_state_base.gd  main_state_init.gd  main_state_process_and_request.gd  main_state_read.gd  main_state_request.gd  main_state_wait.gd  main_state_wait_connection.gd  main_state_wait_environment.gd
test-shared-memory/scripts/test/: read.gd  write.gd
